Make sure buttons have black, not blue, text on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,10 @@ hr.full-width {
   width: 100%;
 }
 
+button {
+  color: var(--black);
+}
+
 img {
   max-width: 100%;
 }
